--- a/locale/fr_FR/LC_MESSAGES/gettext-example.po
+++ b/locale/fr_FR/LC_MESSAGES/gettext-example.po
@@ -1,44 +1,43 @@
-# SOME DESCRIPTIVE TITLE.
-# Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
+# French translations for PACKAGE package.
+# Copyright (C) 2017 THE PACKAGE'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the PACKAGE package.
-# FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
+# Nhu-Hoai Robert VO <nhuhoai.vo@franicflow.ch>, 2017.
 #
-#, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2017-05-15 11:34+0200\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
+"PO-Revision-Date: 2017-05-15 11:51+0200\n"
+"Last-Translator: Nhu-Hoai Robert VO <nhuhoai.vo@franicflow.ch>\n"
+"Language-Team: French\n"
+"Language: fr\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=INTEGER; plural=EXPRESSION;\n"
+"Plural-Forms: nplurals=2; plural=(n > 1);\n"
 
 #: index.php:66
 msgid "Welcome to the gettext() example"
-msgstr ""
+msgstr "Bienvenue à la page d'exemple gettext()"
 
 #: index.php:70
 msgid "You are not logued"
-msgstr ""
+msgstr "Vous n'êtes pas connecté(e)"
 
 #: index.php:77
 #, php-format
 msgid "There is only %d thing"
 msgid_plural "There are %d things"
-msgstr[0] ""
-msgstr[1] ""
+msgstr[0] "Il n'y a que %d truc"
+msgstr[1] "Il y a %d trucs"
 
 #: index.php:79
 msgid "There is nothing"
-msgstr ""
+msgstr "Il y a rien du tout"
 
 #: index.php:83
 #, php-format
 msgid ""
 "<p><b>Debug mode</b><br /><i>$username=%s<br />$count=%d<br />$lang=%s</i><p>"
-msgstr ""
+msgstr "<p><b>Mode debug</b><br /><i>$username=%s<br />$count=%d<br />$lang=%s</i></p>"
